@@ -10,7 +10,7 @@ class S2Dao_SelectDynamicCommand extends S2Dao_AbstractDynamicCommand {
 
     public function __construct(S2Container_DataSource $dataSource,
                                 S2Dao_StatementFactory $statementFactory = null,
-                                S2Container_ResultSetHandler $resultSetHandler,
+                                S2Dao_ResultSetHandler $resultSetHandler,
                                 S2Dao_ResultSetFactory $resultSetFactory = null){
 
         parent::__construct($dataSource, $statementFactory);
