@@ -3,7 +3,7 @@
 /**
  * @author nowel
  */
-class S2Dao_ObjectResultSetHandler implements S2Container_ResultSetHandler {
+class S2Dao_ObjectResultSetHandler implements S2Dao_ResultSetHandler {
 
 	public function S2Dao_ObjectResultSetHandler($beanClass = null) {
 	}
